--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(43, 9, 235);
-    background-image: url("image.jpeg");
+    background-image: url("back-image.jpg");
 }
 
 .main{
